Fix collapse arrow style, close #471

--- a/style/components/collapse.less
+++ b/style/components/collapse.less
@@ -38,7 +38,7 @@
         content: "\e60f";
         vertical-align: middle;
         transition: transform 0.24s ease;
-        top: -1px;
+        top: 0;
         left: 16px;
         top: ~"16px \9";
         left: ~"0 \9";
@@ -77,14 +77,9 @@
     }
   }
 
-  & > &-item-active {
-    > .@{collapse-prefix-cls}-header {
-
-      .arrow {
-        top: -1px;
-        left: 16px;
-        #arrow > .open();
-      }
+  & > &-item > &-header[aria-expanded="true"] {
+    .arrow {
+      #arrow > .open();
     }
   }
 }
